--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -19,5 +19,9 @@ WORKDIR         ${HOME}
 VOLUME          ${APP_ROOT}
 
 COPY            . ${APP_ROOT}
+COPY            entrypoint.sh /usr/local/bin/entrypoint.sh
 
+RUN             chmod +x /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT      ["/usr/local/bin/entrypoint.sh"]
 CMD             ["ruby", "./rbcms-daemon.rb"]
